Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,6 +8,7 @@
     <h1>Pig Latinizer</h1>
     
     <form action="/" method="POST">
+      <label>Enter your phrase: </label>
       <input name="user_phrase" type="text">
       <input id="Submit" type="submit">
     </form>
