Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,8 +8,8 @@
     <h1>Pig Latinizer</h1>
     
     <form action="/" method="POST">
-      <label>Enter your phrase: </label>
-      <input name="user_phrase" type="text">
+      <label for='phrase'>Enter your phrase: </label>
+      <input name="user_phrase" type="text" id='phrase'>
       <input id="Submit" type="submit">
     </form>
     
