--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -16,3 +16,7 @@
     
   </body>
 </html>
+
+
+
+<!DOCTYPE html>\n<html>\n  <head>\n    <meta charset=\"UTF-8\">\n    <title>title</title>\n  </head>...n      </label>\n      <input id=\"Submit\" type=\"submit\">\n    </form>\n    \n  </body>\n</html>" to include "Pig Latinizer!"
