Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -19,4 +19,9 @@
 
 
 
-<!DOCTYPE html>\n<html>\n  <head>\n    <meta charset=\"UTF-8\">\n    <title>title</title>\n  </head>...n      </label>\n      <input id=\"Submit\" type=\"submit\">\n    </form>\n    \n  </body>\n</html>" to include "Pig Latinizer!"
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset=\"UTF-8\">
+  <title>title</title>
+  </head>...n      </label>\n      <input id=\"Submit\" type=\"submit\">\n    </form>\n    \n  </body>\n</html>" to include "Pig Latinizer!"
