Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -23,8 +23,4 @@
 <html>
   <head>
   <meta charset=\"UTF-8\">
-  <title>title</title>
-  </head>...n      </label>\n      <input id=\"Submit\" type=\"submit\">\n    </form>\n    \n  </body>\n</html>" to include "Pig Latinizer!"
-  
-  
-  
+  <title>title</title>\n  </head>...n      </label>\n      <input id=\"Submit\" type=\"submit\">\n    </form>\n    \n  </body>\n</html>" to include "Pig Latinizer!"
