--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer!</h1>
     
-    <form action="/" method="POST">
+    <form action="/piglatinize" method="POST">
       <label for='phrase'>Enter your phrase:
         <input name="user_phrase" type="text" id='phrase'>
       </label>
